--- a/c_class_module/Makefile
+++ b/c_class_module/Makefile
@@ -1,6 +1,6 @@
 all: setup.py
 	python $^ build
-	cp build/lib.linux-x86_64-2.7/noddy.so .
+	cp build/lib.linux-x86_64-2.7/*.so .
 	
 .PHONY:clean
 
